--- a/index.html
+++ b/index.html
@@ -705,6 +705,42 @@
             display: flex;
             justify-content: center;
         }
+
+        @media (max-width: 600px) {
+            #top-bar {
+                padding: 8px 12px;
+                gap: 8px;
+                max-width: 95vw;
+            }
+
+            .stat-box {
+                padding: 0 4px;
+            }
+
+            .stat-label {
+                font-size: 8px;
+            }
+
+            .stat-value {
+                font-size: 16px;
+            }
+
+            .timer-circle {
+                width: 40px;
+                height: 40px;
+            }
+
+            .timer-circle svg {
+                width: 40px;
+                height: 40px;
+            }
+
+            #stop-btn {
+                width: 36px;
+                height: 36px;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 
